--- a/TODO
+++ b/TODO
@@ -1,21 +1,30 @@
 Coming up next:
-- plugin directory configurable (via command line option and with a hard coded default)
-- code cleanup
-- ascii version of docs/masterserver_thread_system.dia
+- docs: add details about destination of some packets
+- rework lib{q2,h2} packet assembly code
+- implement libq3 parser in lib{q2,h2} for player info etc.
+- maybe rework the socket/interface binding code
 
 Near future:
+- static compile target in Makefile
+  maybe dietlibc support
+- implement some anti spamming/DoS or throttling system to prevent DoS attacks
+- implement stub functions for protocols other than udp
+- ascii version of docs/masterserver_thread_system.dia
 - Signal handler
-- Heretic2 plugin
 - specify as which user masterserver should run
-- translate docs/PROTOKOLLE to english, clean it up and order it more clearly
-  (maybe html or something like that)
+- Damn UT is using TCP for communication with master server.
+  Allow plugins to use protocols other than UDP for communication.
+- autotools + FreeBSD support
+- process packets in parallel
 
 More or less far future:
-- Support for other games (HL, SoF, Q1, Q2, etc.)
-	- UT2k3: http://unreal.student.utwente.nl/UT2003-queryspec.html
+- Support for other games:
+	check tasks at http://sf.net/projects/lasange-system
 - Stats
-- XML Output of server list
 - admin commands/interface via network
-- q3 plugin: honor getservers options (empty, full, demo, ffa, ...)
+- libq3: implement "getKeyAuthorize"
+- libq3: implement player statistics(?)
+- include a database interface in masterserver
+  (the one from devil)
 
-Last modified: 3rd Dev 2002 by André Schulz
+Last modified: 2003-10-26 by Andre' Schulz
