--- a/TODO
+++ b/TODO
@@ -4,8 +4,7 @@ Coming up next:
 - maybe rework the socket/interface binding code
 - set vim modelines? /* vim:sw=4:ts=4: */
 - cleanup libqw
-- docs/PROTOKOLLE: add stef1 packets
-- docs/PROTOKOLLE.uk_us: update
+- docs/PROTOCOLS: add stef1 packets
 - write test suite
 - libq3: recover from realloc() error
 
@@ -20,19 +19,22 @@ Near future:
 - autotools + FreeBSD support
 - process packets in parallel
 - add more qw/q2/q3 based games
-- docs/PROTOKOLLE: check which options the stef1 master honors in getservers
+- docs/PROTOCOLS: check which options the stef1 master honors in getservers
 - "The Sega.Net master server address is: "master.id-q3a.games.sega.net: 27950"
+- check out the "populated=1" string gamespy3d sends to q2 master
+- test plugins with server browsers other than qstat/xqf
 
 More or less far future:
 - Support for other games:
 	check tasks at http://sf.net/projects/lasange-system
 - Stats
 - admin commands/interface via network
+	- ability to load/unload plugins on-the-fly
 - libq3: implement "getKeyAuthorize"
 - libq3: implement player statistics(?)
 - include a database interface in masterserver
   (the one from devil)
 - use writev() or something different for sending out packets ?
 
-Last modified: 2004-01-06 by Andre' Schulz
+Last modified: 2004-04-26 by Andre' Schulz
 
